# axiom_engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmark_results.csv  benchmark_results.json  benchmark_results.md  process.md  refactor_to_gtest.py  requirements-optional.txt  run_tests_safely.py
.agents/: global_agent_process_protocol.md
.agents/workflows/: build.md  fix-sonar-issues.md  hpc-optimize.md  run-tla-checks.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/sample/: CMakeLists.txt  sample_benchmark.cpp
core/dispatch/: selective_dispatcher.cpp  selective_dispatcher.h  selective_dispatcher_capi.cpp  selective_dispatcher_capi.h  signal_exec_traits.h
core/engine/: eigen_engine.cpp
docs/: Doxyfile.in  INSTALL_OTHER_DEVICES.md  PHASE_9_CXX23_MODULE_TRANSITION_REPORT.md  process.md
docs/api/: architecture.md  linear_system_parser_api.md  variant_pattern_guide.md
docs/formal/: TLA_PLUS_VERIFICATION.md
docs/qa/: axiom_qa_test_suite.py
docs/user/: performance.md  test_gui_commands.md
examples/advanced/: enhanced_architecture_demo.py
formal/tla/: AxiomDaemonQueueFairness.cfg  AxiomDaemonQueueFairness.tla  AxiomIpcProtocol.cfg  AxiomIpcProtocol.tla
gui/python/: axiom_gui.py  axiom_pro_gui.py  gui_helpers.py  test_persistent.py
gui/qt/: axiom_qt_gui.py  axiom_qt_standard_gui.py  var_store.py  vulkan_widget.py  war_machine.qss
include/: algebraic_parser.h  arena_allocator.h  cpu_optimization.h  daemon_engine.h  dynamic_calc.h  dynamic_calc_types.h  eigen_engine.h  expression_policy.h  extended_types.h  iParser.h  linear_system_parser.h  mantis_heuristic.h  mantis_solver.h  nanobind_interface.h  plot_engine.h  plot_parser.h  python_parser.h  selective_dispatcher.h  statistics_parser.h  symbolic_engine.h  symbolic_parser.h  unit_manager.h  unit_parser.h
modules/: axiom_dynamic_calc_types_module.cpp  axiom_fast_math_module.cpp
resources/windows/: axiom_version.rc
scripts/: AXIOM_PRO_VALIDATION.py  README.md  clean_workspace.bat  coverage_analysis.py  download_cicd_logs.py  fix_engine_result.ps1  setup_other_device_msys2_ucrt.ps1  setup_other_device_unix.sh  setup_other_device_windows.ps1  sign_binary.ps1  sonar_download.py
scripts/test/: README.md  build_and_test.bat  run_all_tests.bat
shaders/: axiom3d.frag  axiom3d.vert
src/: algebraic_parser.cpp  arena_allocator.cpp  cpu_optimization.cpp  daemon_engine.cpp  dynamic_calc.cpp  eigen_engine.cpp  linear_system_parser.cpp  main.cpp  mantis_heuristic.cpp  nanobind_interface.cpp  plot_engine.cpp  plot_parser.cpp  python_engine.cpp  python_parser.cpp  selective_dispatcher.cpp  statistics_engine.cpp  statistics_parser.cpp  symbolic_engine.cpp  symbolic_parser.cpp  unit_manager.cpp  unit_parser.cpp
tests/: CMakeLists.txt  GIGA_TEST_SUITE.md  PLOTTING_TEST_CASES.md  README.md  ast_drills.cpp  benchmark_suite.cpp  edge_case_suite.cpp  giga_test_suite.cpp  test_telemetry_shm.py  tests.cpp
tests/functional/: test_axiom_pro_comprehensive.py  test_direct.py  test_engine.py  test_fast_render_features.py  test_log2.py  test_log_functions.py  test_modulus.py  test_signal_toolkit_edge_cases.py
tests/functional/performance/: README.md  benchmark_1m_vars.py  comprehensive_test_suite.py  quick_perf_test.py  test_fast_render_mode.py  test_plot_perf.py
tests/integration/: core_architecture_test.py
tests/unit/: test_download_cicd_logs.py  test_tla_specs.py
tests/unittest/: CMakeLists.txt
tools/analysis/: signal_processing_toolkit.py
tools/visualization/: advanced_3d_visualization.py
